[package]
name = "ccp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
blake3 = "1.1.0"
clap = { git = "https://github.com/clap-rs/clap" }
crossbeam = "0.8.1"
either = "1.6.1"
glob = "0.3.0"
num_cpus = "1.13.0"
rayon = "1.5.1"
scoped_threadpool = "0.1.9"
